--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "youcan-oauth-relay",
+  "version": "1.0.0",
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.6.8"
+  }
+}
